fixed page layout issue

--- a/src/app/home-page/home-page.component.scss
+++ b/src/app/home-page/home-page.component.scss
@@ -55,8 +55,8 @@
 }
 
 .line {
-  flex: 1;
-  height: 1px;
+ flex: 1 1 100%;
+   height: 1px;
   background: #ff2d2d;
   margin-right: 20px;
 }
@@ -65,6 +65,7 @@
   font-size: 12px;
   padding: 6px 14px;
   height: auto;
+  flex-wrap: wrap;
   line-height: normal;
   border-radius: 4px;}
 
@@ -83,5 +84,22 @@
 
   .role {
     font-size: 12px;
+  }
+    .line-button {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .line {
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .line-button button {
+    width: auto;
+  }
+
+  .line-button p {
+    display: none;
   }
 }
